--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -1,5 +1,5 @@
 .widget {
-	margin: 3em 0 0 1.5em;
+	margin: 1em 0 0 1.5em;
 
 	/* Make sure select elements fit in widgets. */
 	select {
